--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.220.0",
     "next": "^13.4.1",
     "next-axiom": "^0.17.0",
+    "next-seo": "^6.0.0",
     "next-swagger-doc": "^0.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
