--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "@radix-ui/react-scroll-area": "^1.0.3",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/supabase-js": "^2.22.0",
     "@t3-oss/env-nextjs": "^0.2.1",
+    "@tanstack/react-table": "^8.9.1",
     "@types/spotify-api": "^0.0.21",
     "@types/spotify-web-api-node": "^5.0.7",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "lucide-react": "^0.220.0",
     "next": "^13.4.1",
     "next-axiom": "^0.17.0",
@@ -26,6 +30,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "spotify-web-api-node": "^5.0.2",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
