Work on Room page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "prisma.fileWatcher": true,
-  "docwriter.style": "JSDoc"
+  "docwriter.style": "JSDoc",
+  "editor.tabSize": 2,
+  "todo-tree.tree.showBadges": true
 }
