--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.4.2",
@@ -22,6 +25,7 @@
     "@types/spotify-web-api-node": "^5.0.7",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.12.16",
     "lucide-react": "^0.220.0",
     "next": "^13.4.1",
     "next-axiom": "^0.17.0",
@@ -35,6 +39,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.1",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
@@ -46,7 +51,7 @@
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.4.1",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
+    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^4.14.1",
     "tailwindcss": "^3.3.0",
