--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@supabase/auth-helpers-nextjs": "^0.6.1",
+    "@supabase/auth-helpers-nextjs": "^0.7.0",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/supabase-js": "^2.22.0",
@@ -28,13 +28,15 @@
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.220.0",
-    "next": "^13.4.1",
+    "next": "^13.4.4",
     "next-axiom": "^0.17.0",
     "next-seo": "^6.0.0",
     "next-swagger-doc": "^0.3.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.1",
     "spotify-web-api-node": "^5.0.2",
+    "swr": "^2.1.5",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
     "zod": "^3.21.4"
@@ -49,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
+    "encoding": "^0.1.13",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.4.1",
     "postcss": "^8.4.21",
