--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@redis/json": "^1.0.4",
     "@supabase/auth-helpers-nextjs": "^0.7.0",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.4.2",
@@ -33,7 +34,9 @@
     "next-seo": "^6.0.0",
     "next-swagger-doc": "^0.3.6",
     "react": "^18.2.0",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
+    "redis": "^4.6.6",
     "sharp": "^0.32.1",
     "spotify-web-api-node": "^5.0.2",
     "swr": "^2.1.5",
