--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+SERVERVAR=""
+NEXT_PUBLIC_CLIENTVAR=""
+DEV_URL="http://localhost:3000"
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+SUPABASE_SERVICE_ROLE_KEY=""
 
-# When adding additional environment variables, the schema in "/src/env.mjs"
-# should be updated accordingly.
+REDIS_URL=""
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+SPOTIFY_CLIENT_ID=""
+SPOTIFY_CLIENT_SECRET=""
+SPOTIFY_REDIRECT_URI=""
+
+AXIOM_TOKEN=""
+AXIOM_DATASET=""
+
+DATABASE_URL=""
+
