--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.1",
+    "@auth/prisma-adapter": "^1.0.0",
+    "@prisma/client": "^4.15.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@redis/json": "^1.0.4",
     "@supabase/auth-helpers-nextjs": "^0.7.0",
@@ -30,11 +32,11 @@
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.220.0",
     "next": "^13.4.4",
+    "next-auth": "^4.22.1",
     "next-axiom": "^0.17.0",
     "next-seo": "^6.0.0",
     "next-swagger-doc": "^0.3.6",
     "react": "^18.2.0",
-    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.6",
     "sharp": "^0.32.1",
@@ -61,6 +63,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^4.14.1",
+    "supabase": "^1.64.8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
