--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start",
     "format": "prettier --write .",
@@ -39,6 +39,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-spotify-web-playback-sdk": "^3.0.2",
     "redis": "^4.6.6",
     "sharp": "^0.32.1",
     "spotify-web-api-node": "^5.0.2",
